<resources>
    <string name="app_name">अगद आयुर्वेद</string>
    <string name="title_activity_dashboard">डैशबोर्ड</string>
    <string name="navigation_drawer_open">नेविगेशन दराज खोलें</string>
    <string name="navigation_drawer_close">नेविगेशन ड्रॉअर बंद करें</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">नेविगेशन हेडर</string>
    <string name="action_settings">Settings</string>

    <string name="link">https://digitalaadmi.com/agadayurveda/</string>

    <string name="menu_home">घर</string>
    <string name="menu_gallery">गेलरी</string>
    <string name="menu_slideshow">स्लाइड शो</string>
    <string name="already_fav">पहले से ही Favourited</string>
    <string name="remove_fav">पसंदीदा से हटाया गया</string>


    <string name="daily_tips">दैनिक सुझाव</string>
    <string name="whatsapp">whatsapp</string>
    <string name="nodata">कोई डेटा नहीं मिला</string>
    <string name="Share">शेयर</string>
    <string name="give_rating">रेटिंग दें</string>
    <string name="about_us">हमारे बारे में</string>
    <string name="homepage">मुख्य पृष्ठ</string>
    <string name="nodetails">कोई विवरण नहीं मिला</string>
    <string name="exit_detail">हमें उम्मीद है कि आपको हमारा ऐप पसंद आया होगा। कृपया हमें रेटिंग दें और इस ऐप को अधिक से अधिक लोगों के साथ साझा करें</string>
    <string name="exit">बाहर जाएं</string>
    <string name="privacy_policy">प्राइवेसी पालिसी </string>


    <string name="every_day_tip">रोज़ाना नुस्ख़े</string>
    <string name="fav_tips">पसंदीदा टिप्स</string>
    <string name="bydisease">रोग के अनुसार </string>
    <string name="byherbs">औषधि के अनुसार </string>
    <string name="Favourites">पसंदीदा</string>
    <string name="addtofav">पसंदीदा में जोड़ें</string>
    <string name="Loading">लोड हो रहा है</string>
    <string name="privacy_data">Agad Ayurveda built the Agad Ayurveda, घरेलु आयुर्वेदिक उपचार app as a Free app. This SERVICE is provided by Agad Ayurveda at no cost and is intended for use as is.
This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Agad Ayurveda, घरेलु आयुर्वेदिक उपचार unless otherwise defined in this Privacy Policy.
Information Collection and Use
For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Nothing. The information that I request will be retained on your device and is not collected by me in any way.
The app does use third party services that may collect information used to identify you.
Link to privacy policy of third party service providers used by the app
•	Google Play Services
•	Google Analytics for Firebase
Log Data
I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
Cookies
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
Service Providers
I may employ third-party companies and individuals due to the following reasons:
•	To facilitate our Service;
•	To provide the Service on our behalf;
•	To perform Service-related services; or
•	To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
Security
I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
Links to Other Sites
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
Children’s Privacy
These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
Changes to This Privacy Policy
I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.
This policy is effective as of 2021-03-27
Contact Us
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at agadayurveda@gmail.com.</string>
    <string name="about_us_data">हमारे बारे में

अगद आयुर्वेद एक छोटा सा प्रयास है लोगों को आयुर्वेदिक घरेलु उपचारों से अवगत करने का, हमारे द्वारा बताये गए सभी नुस्ख़े अनुभवी आयुर्वेदाचार्यों का ज्ञान और अनुभव है. आशा करते हैं कि आपको इस एप्प से लाभ जरुर मिलेगा. अगर हमारा प्रयास अच्छा लगे तो इस एप्प को अधिक से अधिक लोगों तक जरुर पहुचाएं.</string>

</resources>