<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_daily_tips"
            android:icon="@drawable/ic_bell"
            android:title="@string/daily_tips" />

    </group>
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_review"
            android:title="@string/give_rating" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/Share" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/privacy_policy" />

    </group>
</menu>