<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_design_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_app_icon">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/exit_detail">

        </TextView>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Share"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:background="@drawable/button"
            >

        </Button>
        <Button
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/give_rating"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/button"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homepage"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:background="@drawable/button"
            >

        </Button>
        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/button"
            />

    </LinearLayout>



</LinearLayout>