<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_margin="5dp"
        android:background="@color/red"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/by_disease"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="5dp"
                android:background="@drawable/round_design_white"
                android:layout_weight="1">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bydisease"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textColor="#000"
                    android:textSize="16sp" />

            </LinearLayout>







            <LinearLayout

                android:id="@+id/byherbs"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/round_design_white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/byherbs"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textSize="16sp"
                    android:textColor="#000" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/every_day_tips"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="5dp"
                android:background="@drawable/round_design_white"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_bell">

                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/every_day_tip"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:id="@+id/employees"
                    android:textColor="#000"
                    android:textSize="16sp" />

            </LinearLayout>







            <LinearLayout

                android:id="@+id/fav_tips"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/round_design_white"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_favourite">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav_tips"
                    android:id="@+id/punched"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textSize="16sp"
                    android:textColor="#000" />

            </LinearLayout>

        </LinearLayout>





    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ededed">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:dividerHeight="3dp"
            android:layout_weight="1"
            android:divider="@android:color/transparent"

            >
        </ListView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </LinearLayout>


</LinearLayout>
        
   