<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Detail_page">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oneside_round"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/backarrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/headertitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="3"
                android:gravity="right">
                <ImageView
                    android:id="@+id/fav"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_fav_no" />


            </LinearLayout>


        </LinearLayout>


    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/round_design_white">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TITLE"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:gravity="center">

        </TextView>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="This is made By Danish yahya,ajdhasjkdbjkdadaslhasfoibo;ahfoahf fgauif adas fdas fsaf asf as fas f as fsa fsa f asjfbas jasbfjasbf askfj as fa fas fkasf afka sfka fsa f askf sak fa fask fkas"
            android:layout_margin="10dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:gravity="center">


        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginRight="7dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="8dp"
                android:paddingLeft="15dp"
                android:drawableLeft="@drawable/ic_share"
                android:paddingBottom="8dp"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:text="@string/Share">

            </Button>
            <Button
                android:id="@+id/whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="7dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="14dp"
                android:drawableLeft="@drawable/ic_whatsapp"
                android:paddingLeft="15dp"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:text="@string/whatsapp">

            </Button>

        </LinearLayout>
        <Button
            android:id="@+id/addfav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:text="@string/addtofav">

        </Button>

    </LinearLayout>


</LinearLayout>